# CMake-Tutorial

./: .gitignore  README.md
10_vcpkg_hello/: CMakeLists.txt  vcpkg-configuration.json
1_basic/: CMakeLists.txt  basic.cpp  config.h.in
2_library_test/: CMakeLists.txt  library_test.cpp
2_library_test/sub_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
4_generator_expressions/: CMakeLists.txt
4_generator_expressions/MathFunctions/: CMakeLists.txt
